net file changed with local

--- a/Net.html
+++ b/Net.html
@@ -3,6 +3,6 @@
   <head>
     <title> New</title>
     <h1> New the begining</h1>
-    <p> New Journy Start</p>
+    <p> New Journy Start local</p>
   </head>
 </html>
